<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lumina POS</string>

    <string name="Selamat_Pagi">Selamat Pagi (%1$s)</string>
    <string name="Selamat_Siang">Selamat Siang (%1$s)</string>
    <string name="Selamat_Sore">Selamat Sore (%1$s)</string>
    <string name="Selamat_Malam">Selamat Malam (%1$s)</string>

    <string name="estimasi_hari_ini">Estimasi Hari Ini</string>
    <string name="transaksi">Transaksi</string>
    <string name="laporan">Laporan</string>
    <string name="siap_melayani_pelanggan">Siap melayani pelanggan</string>
    <string name="jangan_kecewakan_pelanggan">Jangan kecewakan pelanggan</string>
    <string name="profil">Profil</string>
    <string name="produk">Produk</string>
    <string name="kategori">Kategori</string>
    <string name="pegawai">Pegawai</string>
    <string name="cabang">Cabang</string>
    <string name="mencetak">Mencetak</string>

    <string-array name="status_array">
        <item>Aktif</item>
        <item>Nonaktif</item>
    </string-array>
    <string name="data_cabang">Data Cabang</string>
    <string name="ringkasan_hari_ini">Ringkasan Hari Ini</string>
    <string name="cetak_laporan">Cetak Laporan</string>
    <string name="cetak_laporan_penjualan">Cetak Laporan Penjualan</string>
    <string name="tekan_tombol_di_bawah_ini_untu">Tekan tombol di bawah ini untuk mencetak seluruh laporan transaksi Anda menggunakan layanan pencetakan perangkat.</string>
    <string name="cetak_sekarang">Cetak Sekarang</string>
    <string name="data_kategori">Data Kategori</string>
    <string name="aktif">Aktif</string>
    <string name="laporan_penjualan">Laporan Penjualan</string>
    <string name="total_pendapatan_rp_0">Total Pendapatan: Rp 0</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="silakan_masuk_untuk_melanjutka">Silakan masuk untuk melanjutkan</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun_daftar_di_sin">Belum punya akun? Daftar di sini</string>
    <string name="data_produk">Data Produk</string>
    <string name="tambah_kategori">Tambah Kategori</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="status">Status</string>
    <string name="simpan">Simpan</string>
    <string name="data_pegawai">Data Pegawai</string>
    <string name="toko_anda">Toko Anda</string>
    <string name="ketuk_avatar_atau_foto_latar_u">Ketuk avatar atau foto latar untuk mengubahnya</string>

    <string name="informasi_toko">Informasi Toko</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="alamat_toko">Alamat Toko</string>
    <string name="no_telepon_toko">No. Telepon Toko</string>
    <string name="email_toko">Email Toko</string>
    <string name="website_media_sosial">Website / Media Sosial</string>
    <string name="deskripsi_toko">Deskripsi Toko</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="bergabunglah_bersama_kami">Bergabunglah bersama kami</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="password_min_6_karakter">Password (min. 6 karakter)</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="sudah_punya_akun_masuk_di_sini">Sudah punya akun? Masuk di sini</string>
    <string name="tampilan_theme">Tampilan / Theme</string>
    <string name="mode_gelap_night_mode">Mode Gelap (Night Mode)</string>
    <string name="bahasa_language">Bahasa / Language</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="english">English</string>
    <string name="transaksi_kasir">Transaksi Kasir</string>
    <string name="total_rp_0">Total: Rp 0</string>
    <string name="nama_cabang">Nama Cabang</string>
    <string name="alamat_cabang">Alamat Cabang</string>
    <string name="no_telepon_cabang">No. Telepon Cabang</string>
    <string name="nama_pegawai">Nama Pegawai</string>
    <string name="jabatan">Jabatan</string>
    <string name="no_handphone">No Handphone</string>
    <string name="pilih_produk">Pilih Produk</string>
    <string name="jumlah">Jumlah</string>
    <string name="alamat">Alamat</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="no_hp">No. HP</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="kategori_elektronik">Kategori: Elektronik</string>
    <string name="stok_12">Stok: 12</string>
    <string name="rp_25_000">Rp 25.000</string>
    <string name="jumlah_1">Jumlah: 1</string>
    <string name="tanggal">Tanggal</string>
    <string name="stok">Stok</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pencarian">Pencarian...</string>

    <string name="nota_pembayaran">NOTA PEMBAYARAN</string>
    <string name="no_nota">No. Nota :</string>
    <string name="waktu">Waktu :</string>
    <string name="kasir">Kasir :</string>
    <string name="pelanggan_nota">Pelanggan :</string>
    <string name="item">ITEM</string>
    <string name="qty">QTY</string>
    <string name="harga">HARGA</string>
    <string name="jumlah_nota">JUMLAH</string>
    <string name="subtotal">Subtotal :</string>
    <string name="diskon">Diskon :</string>
    <string name="pajak">Pajak :</string>
    <string name="total_nota">TOTAL</string>
    <string name="metode_bayar">Metode Bayar :</string>
    <string name="dibayar">Dibayar :</string>
    <string name="kembalian">Kembalian :</string>
    <string name="terima_kasih">Terima Kasih!</string>
    <string name="barang_yang_sudah_dibeli">Barang yang sudah dibeli tidak dapat ditukar atau dikembalikan.</string>
    <string name="bagikan">Bagikan</string>
    <string name="cetak">Cetak</string>
    <string name="transaksi_baru">Transaksi Baru</string>
    <string name="cabang_nota">Cabang:</string>
    <string name="gagal_membagikan_nota">Gagal membagikan nota:</string>
    <string name="gagal_mencetak">Gagal mencetak:</string>
    <string name="uang_tunai_tidak_cukup">Uang tunai tidak cukup!</string>
    <string name="memproses">Memproses...</string>
    <string name="proses_pembayaran">PROSES PEMBAYARAN</string>
    <string name="gagal_menyimpan">Gagal menyimpan:</string>
    <string name="pendapatan_hari_ini">Pendapatan Hari Ini</string>
    <string name="trx_hari_ini">Trx Hari Ini</string>
    <string name="pelanggan_aktif">Pelanggan Aktif</string>
    <string name="buka_kasir_pos">Buka Kasir POS</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="total_pendapatan">Total Pendapatan</string>
    <string name="nota">Nota</string>
    <string name="macam_produk">Macam Produk</string>
    <string name="jumlah_total">Jumlah Total</string>
    <string name="tap_avatar">Tap avatar</string>
    <string name="petinjau_nota_penjualan">Petinjau Nota Penjualan</string>
    <string name="terimakasih_ucapan">Terimakasih</string>
    <string name="batal">Batal</string>
    <string name="hapus">Hapus</string>
    <string name="hapus_riwayat">Hapus Riwayat</string>
    <string name="apakah_anda_yakin_ingin_menghapus_nota">Apakah Anda Yakin Ingin Menghapus Nota</string>
    <string name="data_pelanggan_2">Data Pelanggan</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="cari_pelanggan">Cari Pelanggan</string>
    <string name="pelanggan_terdaftar">Pelanggan Terdaftar</string>
    <string name="ubah_produk">Ubah Produk</string>
    <string name="cari_pegawai">Cari Pegawai</string>
    <string name="nonaktif">Nonaktif</string>
    <string name="data_kata">Data</string>
    <string name="cari_cabang">Cari Cabang</string>
    <string name="tambah_cabang">Tambah Cabang</string>
    <string name="petinjau_cetak_laporan">Petinjau Cetak Laporan</string>
    <string name="cetak_semua_laporan">Cetak Semua Laporan</string>
    <string name="cari_produk">Cari Produk</string>
    <string name="total_belanja">Total Belanja</string>
    <string name="bayar">Bayar</string>
    <string name="kasir_pos">Kasir POS</string>
    <string name="keranjang">Keranjang</string>
    <string name="jenis_item">Jenis Item</string>
    <string name="ringkasan_pemesanan">Ringkasan Pemesanan</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="total_yang_harus_dibayar">Total Yang Harus Dibayar</string>
    <string name="kasir_bertugas">Kasir Bertugas</string>
    <string name="nama_kasir">Nama Kasir</string>
    <string name="metode_pembayaran_title">Metode Pembayaran</string>
    <string name="tunai">Tunai</string>
    <string name="transfer_bank">Transfer Bank</string>
    <string name="kartu_debit">Kartu Debit</string>
    <string name="nominal_uang">Nominal Uang</string>
    <string name="pendapatan_hari_ini_emoji">💰 Pendapatan Hari Ini</string>
    <string name="buka_kasir_pos_emoji">🛒 BUKA KASIR POS</string>
    <string name="keranjang_emoji">🛒 Keranjang</string>
    <string name="pelanggan">Pelanggan</string>
</resources>